fixato wrapping divs

--- a/src/App.css
+++ b/src/App.css
@@ -158,5 +158,6 @@ td {
 .boardAndTavolozza {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  overflow: visible;
 }
